feat: Add up/down vote (all board)
