# router/fixboard.js
@@ -21,10 +21,12 @@ for (i=0; i<9; i++) {
 
 router.get('/fixboard', auth, async (req,res) => {
     try {
-        data = await query2(`select p.*,u.userid,v.vote,vtable.already_vote from fixboard as p 
+        data = await query2(`select p.*,u.userid,v.upvote,v2.downvote,vtable.already_vote from fixboard as p 
         left join user as u on p.fix_writer = u.useridx
-        left join (select boardidx,count(*) as vote from votetable where boardtype='fix' group by boardidx) as v on v.boardidx = p.fixidx
-        left join (select boardidx,if(count(voteidx)!=0,true,false) as already_vote from votetable where boardtype='fix' and voter=? group by boardidx) as vtable on vtable.boardidx = p.fixidx`,[uidx])
+        left join (select boardidx,count(*) as upvote   from votetable where boardtype='fix' and votetype='up' group by boardidx) as v on v.boardidx = p.fixidx
+        left join (select boardidx,count(*) as downvote from votetable where boardtype='fix' and votetype='down' group by boardidx) as v2 on v2.boardidx = p.fixidx
+        left join (select boardidx,if(count(voteidx)!=0,true,false) as already_vote from votetable where boardtype='fix' and voter=? group by boardidx) as vtable on vtable.boardidx = p.fixidx`
+        ,[uidx])
         return res.send(data).status(200)
     }
     catch (err) {
@@ -37,7 +39,10 @@ router.get('/fixread', auth, async (req,res) => {
     const fixidx = req.query.fixidx
 
     try {
-        db.query('select p.*,u.userid from (select * from fixboard where fixidx=?) as p left join user as u on p.fix_writer = u.useridx',[fixidx], async(err,data)=> {
+        db.query(`SELECT p.*,u.userid, vtable.already_vote FROM (SELECT * FROM fixboard WHERE fixidx=?) AS p 
+        LEFT JOIN user AS u ON p.fix_writer = u.useridx
+        left join (select boardidx,if(count(voteidx)!=0,true,false) as already_vote from votetable where boardtype='fix' and voter=? group by boardidx) as vtable on vtable.boardidx = p.fixidx`
+        ,[fixidx,uidx], async(err,data)=> {
             if(err){
                 console.log(err)
                 return res.sendStatus(400)
@@ -76,7 +81,8 @@ router.post('/fixwrite', auth, async (req,res) => {
         const response = await axios.post("http://211.226.199.46/proposals",postdata)
 
         if (response.status == 200) {
-            const writeid = await query2('UPDATE fixboard SET fix_proposalid=? WHERE fixidx=?',[response.data.id, fixidx])
+            const writePropose = await query2('INSERT INTO proposal(proposal_id,proposal_userid,proposal_timeStamp,proposal_type,proposal_boardidx,proposal_status) VALUES (?,?,?,?,?,?) ',
+            [response.data.id, response.data.userId,response.data.timeStamp,response.data.type,fixidx,response.data.status])
             return res.sendStatus(201)
         }
         else
@@ -89,11 +95,23 @@ router.post('/fixwrite', auth, async (req,res) => {
 })
 
 
-router.post('/newvote', auth, async (req,res) => {
+router.post('/fixvote', auth, async (req,res) => {
     const fixidx = req.body.fixidx
+    const votetype = req.body.votetype
     try {
-        do_vote = await query2('INSERT INTO votetable(voter,boardtype,boardidx) VALUES(?,?,?)',[uidx,'fix',fixidx])
-        return res.sendStatus(200)
+        do_vote = await query2('INSERT INTO votetable(voter,boardtype,boardidx,votetype) VALUES(?,?,?,?)',[uidx,'fix',fixidx,votetype])
+        
+        get_proposal = await query2('SELECT * FROM proposal WHERE proposal_type = "fixboard" and proposal_boardidx=?',[fixidx])
+        proposalid = get_proposal[0]['proposal_id']
+
+        postdata = { "userId":uidx,"amounts":2.3, "timestamp":Date.now() ,"type":votetype }
+        const response = await axios.post("http://211.226.199.46/proposals/"+proposalid+"/fixboard/votes",postdata)
+
+        if (response.status == 200) {
+            return res.sendStatus(201)
+        }
+        else
+            return res.sendStatus(500)
     }
     catch (err) {
         console.log(err)
